name:                cardano-sl
version:             1.3.0
synopsis:            Cardano SL main implementation
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:      Paths_cardano_sl

                        Pos.AllSecrets

                        -- Arbitrary instances
                        Pos.Binary
                        Pos.Context
                        Pos.Communication
                        Pos.Configuration
                        Pos.Constants

                        Pos.DB.DB

                        -- Diffusion layer
                        Pos.Diffusion.Full
                        Pos.Diffusion.Full.Block
                        Pos.Diffusion.Full.Delegation
                        Pos.Diffusion.Full.Ssc
                        Pos.Diffusion.Full.Txp
                        Pos.Diffusion.Full.Update

                        -- GState
                        Pos.GState

                        -- Logic layer
                        Pos.Logic.Types
                        Pos.Logic.Full
                        Pos.Logic.Pure

                        -- Behavior
                        Pos.Behavior

                        -- Launcher
                        Pos.Launcher
                        Pos.Launcher.Configuration
                        Pos.Launcher.Resource
                        Pos.Launcher.Runner

                        -- Listener
                        Pos.Listener.Delegation
                        Pos.Listener.Txp
                        Pos.Listener.Update

                        -- Network
                        Pos.Network.Update.Download
                        Pos.Network.Block.Logic
                        Pos.Network.Block.Retrieval
                        Pos.Network.Block.RetrievalQueue
                        Pos.Network.Block.Types
                        Pos.Network.Block.WorkMode

                        -- cardano-sl-client & cardano-sl-generator
                        Pos.Communication.Limits
                        Pos.Communication.Types

                        -- Recovery
                        Pos.Recovery
                        Pos.Recovery.Types

                        -- Client CLI
                        Pos.Client.CLI
                        Pos.Client.CLI.NodeOptions
                        Pos.Client.CLI.Options
                        Pos.Client.CLI.Params
                        Pos.Client.CLI.Secrets
                        Pos.Client.CLI.Util

                        Pos.Reporting.Production

                        -- Utilities/helpers
                        Pos.Util.Config
                        Pos.Util.OutboundQueue
                        Pos.Util.UserSecret

                        Pos.Web
                        Pos.Web.Api
                        Pos.Web.Mode
                        Pos.Web.Server
                        Pos.Web.Types

                        -- Worker, work mode
                        Pos.Worker
                        Pos.Worker.Block
                        Pos.Worker.Delegation
                        Pos.Worker.Ssc
                        Pos.Worker.Update
                        Pos.WorkMode
                        Pos.WorkMode.Class

                        -- Binary serialization
                        Pos.Binary.Communication

                        -- Exposed for tests
                        Test.Pos.Helpers

                        -- Util code for tests
                        Test.Pos.Configuration

                        Pos.Util.Servant


  other-modules:
                        -- NodeContext
                        Pos.Context.Context

                        -- Crypto
                        Pos.Crypto.HDDiscovery

                        -- GState
                        Pos.GState.Context
                        Pos.GState.GState

                        -- Launcher
                        Pos.Launcher.Launcher
                        Pos.Launcher.Mode
                        Pos.Launcher.Param
                        Pos.Launcher.Scenario

                        -- Network
                        Pos.Communication.Server

  build-depends:        base
                      , QuickCheck
                      , async
                      , aeson >= 0.11.2.1
                      , aeson-options
                      , async
                      , ansi-terminal
                      , ansi-wl-pprint
                      , bytestring
                      , canonical-json
                      , cardano-sl-binary
                      , cardano-sl-binary-test
                      , cardano-sl-chain
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-crypto-test
                      , cardano-sl-db
                      , cardano-sl-infra
                      , cardano-sl-networking
                      , cardano-sl-util
                      , conduit >= 1.2.8
                      , constraints
                      , containers
                      , contravariant
                      , cryptonite >= 0.23
                      , data-default
                      , directory
                      , ekg-core
                      , ether >= 0.5
                      , exceptions
                      , filelock >= 0.1.0.1
                      , filepath
                      , formatting
                      , generic-arbitrary
                      , hspec
                      , http-client
                      , http-client-tls
                      , http-conduit
                      , http-types
                      , lens
                      , log-warper >= 1.1.1
                      , memory
                      , mmorph
                      , monad-control
                      , mtl
                      , neat-interpolation
                      , network
                      , network-transport
                      , optparse-applicative
                      , parsec
                      , pvss
                      , random
                      , reflection
                      , safe-exceptions
                      , serokell-util >= 0.1.3.4
                      , servant >= 0.8.1
                      , servant-client >= 0.8.1
                      , servant-client-core >= 0.8.1
                      , servant-server >= 0.8.1
                      , servant-swagger
                      , stm
                      , streaming-commons
                      , tagged
                      , template-haskell
                      , text
                      , formatting
                      , time
                      , time-units
                      , tls
                      , transformers
                      , universum >= 0.1.11
                      , unliftio
                      , unordered-containers
                      , wai
                      , warp
                      , warp-tls
                      , x509
                      , x509-store
                      , x509-validation
                      , yaml
                      -- https://issues.serokell.io/issue/DEVOPS-230
                      , cpphs
                      -- Required for common test modules
                      , cborg

  if !os(windows)
    build-depends:      unix

  if !os(windows) && !os(freebsd)
     -- See: https://github.com/input-output-hk/stack2nix/issues/56
     build-depends:      systemd

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite cardano-test
  main-is:             Test.hs
  other-modules:
                       -- Standard module with some magic
                       Spec

                       Test.Pos.Slotting.TypesSpec

                       -- Ssc
                       Test.Pos.Ssc.ComputeSharesSpec
                       Test.Pos.Ssc.Identity.SafeCopySpec
                       Test.Pos.Ssc.SeedSpec
                       Test.Pos.Ssc.Toss.BaseSpec
                       Test.Pos.Ssc.VssCertDataSpec
                       Test.Pos.Ssc.Toss.PureSpec

                       -- Everything else
                       Test.Pos.Block.Arbitrary.Message
                       Test.Pos.Block.CborSpec
                       Test.Pos.Cbor.CborSpec
                       Test.Pos.ConstantsSpec
                       Test.Pos.Diffusion.BlockSpec
                       Test.Pos.Genesis.CanonicalSpec
                       Test.Pos.Launcher.ConfigurationSpec
                       Test.Pos.MerkleSpec
                       Test.Pos.Infra.Slotting.TypesSpec
                       Test.Pos.Types.Identity.SafeCopySpec
                       Test.Pos.Types.Identity.ShowReadSpec
                       Test.Pos.Update.Identity.SafeCopySpec
                       Test.Pos.Update.MemStateSpec
                       Test.Pos.Update.PollSpec


  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , cardano-crypto
                     , cardano-sl
                     , cardano-sl-binary
                     , cardano-sl-binary-test
                     , cardano-sl-chain
                     , cardano-sl-chain-test
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-db
                     , cardano-sl-db-test
                     , cardano-sl-infra
                     , cardano-sl-infra-test
                     , cardano-sl-networking
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , conduit
                     , containers
                     , cryptonite
                     , data-default
                     , deepseq
                     , extra
                     , filelock
                     , formatting
                     , generic-arbitrary
                     , hspec
                     , lens
                     , log-warper
                     , network-transport
                     , network-transport-inmemory
                     , pvss
                     , random
                     , reflection
                     , serokell-util >= 0.1.3.4
                     , tagged
                     , text
                     , time
                     , time-units
                     , universum >= 0.1.11
                     , unordered-containers

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark cardano-bench-criterion
  hs-source-dirs:      bench
  main-is:             Local/Criterion.hs
  other-modules:       Bench.Pos.Criterion.FollowTheSatoshiBench
                       Bench.Pos.Criterion.TxSigningBench
                       Bench.Configuration
                       Bench.Pos.Diffusion.BlockDownload
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , cardano-sl
                     , cardano-sl-chain
                     , cardano-sl-chain-test
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-db
                     , cardano-sl-infra
                     , cardano-sl-networking
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , conduit
                     , criterion
                     , deepseq
                     , formatting
                     , network-transport
                     , network-transport-inmemory
                     , optparse-applicative
                     , time-units
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
