name:                cardano-sl-lrc
version:             1.1.1
synopsis:            Cardano SL - Leaders and Richmen computation
description:         Cardano SL - Leaders and Richmen computation
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pos.Arbitrary.Lrc

                       Pos.Lrc.Fts
                       Pos.Lrc.Types
                       Pos.Lrc.Error
                       Pos.Lrc.Core
                       Pos.Lrc.Consumer
                       Pos.Lrc.RichmenComponent
                       Pos.Lrc.Context
                       Pos.Lrc.Mode

                       Pos.Lrc.DB.Common
                       Pos.Lrc.DB.Issuers
                       Pos.Lrc.DB.RichmenBase
                       Pos.Lrc.DB.Seed

  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-db
                     , cardano-sl-networking
                     , cardano-sl-util
                     , conduit
                     , ether
                     , formatting
                     , generic-arbitrary
                     , lens
                     , log-warper
                     , reflection
                     , rocksdb-haskell-ng
                     , text-format
                     , universum
                     , unliftio
                     , unordered-containers

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Test.Pos.Lrc.FtsSpec
  build-depends:       base
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-lrc
                     , cardano-sl-util-test
                     , containers
                     , hspec
                     , QuickCheck
                     , universum
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       FlexibleContexts
                       NoImplicitPrelude
                       OverloadedStrings
                       UndecidableInstances
                       ViewPatterns
