name:                cardano-sl-lwallet
version:             0.4.4
synopsis:            Cardano SL - Light wallet
description:         Cardano SL - Light wallet
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

executable cardano-wallet
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:
                       Command
                       WalletOptions

                       Pos.Wallet.Light
                       Pos.Wallet.Light.Launcher
                       Pos.Wallet.Light.Launcher.Runner
                       Pos.Wallet.Light.Launcher.Param
                       Pos.Wallet.Light.Mode
                       Pos.Wallet.Light.State
                       Pos.Wallet.Light.State.Acidic
                       Pos.Wallet.Light.State.Core
                       Pos.Wallet.Light.State.State
                       Pos.Wallet.Light.State.Storage
                       Pos.Wallet.Light.State.Storage.Block
                       Pos.Wallet.Light.State.Storage.Tx
                       Pos.Wallet.Light.Redirect
                       Pos.Wallet.Light.Web
                       Pos.Wallet.Light.Web.Server

  build-depends:
                       QuickCheck
                     , acid-state
                     , ansi-wl-pprint
                     , base
                     , base58-bytestring
                     , binary
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl-db
                     , cardano-sl-update
                     , cardano-sl-infra
                     , cardano-sl
                     , data-default
                     , either
                     , ether
                     , containers
                     , formatting
                     , lens
                     , lifted-async
                     , log-warper
                     , mmorph
                     , monad-control
                     , monad-loops
                     , mtl
                     , network-transport-tcp
                     , node-sketch
                     , optparse-applicative
                     , parsec
                     , resourcet
                     , safecopy
                     , serokell-util >= 0.1.3.4
                     , stm-containers
                     , string-qq
                     , tagged
                     , text
                     , time
                     , time-units
                     , transformers
                     , transformers-base
                     , transformers-lift
                     , universum >= 0.1.11
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if !os(windows)
    build-depends:     unix
